Fix spacing issues with GitHub CTA

--- a/src/_sass/components/projects.scss
+++ b/src/_sass/components/projects.scss
@@ -82,7 +82,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    text-align: center;
+    align-items: center;
 
     a {
         border-radius: 50%;
@@ -91,9 +91,18 @@
         margin-top: 20px;
         width: 50px;
 
-        svg {
+        .icon-github {
             @include transition(fill);
             @include themed(fill, $brand-github, $brand-github-alt);
         }
     }
+}
+
+.github-cta-heading {
+    font-size: 1em;
+    margin-bottom: 0.5em;
+}
+
+.github-cta-subheading {
+    margin: 0;
 }
